Proceeded to fix and proff form on small screens

--- a/main.scss
+++ b/main.scss
@@ -346,7 +346,7 @@ _______________________________
         right: 50px;
         bottom: 150px;
         padding: 15px;
-        max-height: 70vh;
+        height: 70vh;
         width: 500px;
         background: $primary-background-color;
         border: 2px double $primary-text-color;
@@ -359,7 +359,7 @@ _______________________________
         }
     }
     .contact-form-wrapper-show {
-        overflow-y: scroll;
+        overflow-y: auto;
         animation: puff-in-center $default-transition-duration ease;
         position: fixed;
         opacity: 1;
@@ -367,7 +367,7 @@ _______________________________
         right: 50px;
         bottom: 150px;
         padding: 15px;
-        max-height: 70vh;
+        height: 70vh;
         width: 500px;
         background: $primary-background-color;
         border: 2px double $primary-text-color;
@@ -1047,12 +1047,10 @@ _______________________________
      .contact-form-wrapper-hide {
          max-height: 70vh;
          width: 400px;
-         bottom: 30px;
      }
      .contact-form-wrapper-show {
          max-height: 70vh;
          width: 400px;
-         bottom: 30px;
 
      }
      .contact-form {
@@ -1281,9 +1279,6 @@ _______________________________
       }
       .skill-title-wrapper {
         position: relative;
-        // top: 0;
-        // left: 50%;
-        // transform: translateX(-50%);
           h2 {
               font-size: 20px;
               letter-spacing: 0.5em;
@@ -1356,7 +1351,7 @@ _______________________________
     }
   }
 }
-@media screen and (max-height: 700px) {
+@media screen and (max-height: 800px) {
   .contacts {
     .contact-form-info {
       font-size: 12px;
@@ -1365,10 +1360,12 @@ _______________________________
    .contact-form-wrapper-hide {
        max-height: 80vh;
        width: 400px;
+       bottom: 30px;
    }
    .contact-form-wrapper-show {
        max-height: 80vh;
        width: 400px;
+       bottom: 30px;
    }
    .contact-form {
      .contact-float {
